--- a/css/styles.css
+++ b/css/styles.css
@@ -583,7 +583,7 @@ color: var(--accent-color);
 .footer-contacts__link {
     font-style: normal;
     text-decoration: none;
-    color: var(--accent-color);
+    color: var(--primary-phon-color);
 }
 
 .footer-contacts__link:hover,
@@ -594,3 +594,7 @@ color: var(--accent-color);
 .footer-contacts__link--address {
     color: var(--primary-bt-color);
 }
+
+
+
+
