--- a/css/styles.css
+++ b/css/styles.css
@@ -165,17 +165,21 @@ button {
 }
 
 .logo {
-   
+    font-family: Raleway, sans-serif;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
     text-decoration: none;
-
+    padding-top: 24px;
+    padding-bottom: 24px;
     color: var(--title-text-color-one);
 }
 
 .logo__accent {
     color: var(--accent-color);
+    font-family: Raleway, sans-serif;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .features-heading,
@@ -214,25 +218,22 @@ button {
  .features-list .item {
     flex-basis: calc(100% / 4 - var(--list-items-gap));
     margin-left: var(--list-items-gap);
-    margin-top: 10px;
+   
 }
 
 
 .portfolio-cards {
     display: flex;
     flex-wrap: wrap;
-    margin-top: calc((-1 * var(--list-items-gap)) + 50px);
-    margin-left: calc(-1 * var(--list-items-gap));
-   
+     gap: 30px;
 }
 
  .portfolio-cards .item {
-    flex-basis: calc(100% / 3 - var(--list-items-gap));
-        margin-top: var(--list-items-gap);
-        margin-left: var(--list-items-gap);
-      
+    flex-basis: calc(100% / 3 - var(--list-items-gap));     
  }
-
+.portfolio-filter{
+    margin-bottom: 50px;
+}
    .portfolio-cards .description {
         padding-top: 20px;
         padding-bottom: 20px;
